🐛 Fixes #3 - On mobile, body scroll is disabled on menu open

--- a/assistantnms_web/seo/scss/main.scss
+++ b/assistantnms_web/seo/scss/main.scss
@@ -33,6 +33,10 @@ body {
     color: $text-color;
     scroll-behavior: smooth;
 
+    &.mobile-open {
+        overflow: hidden !important;
+    }
+
     .header {
         background-color: darken($background, 5%);
         z-index: 2;
